# VoiceToInstrument

./: CMakeLists.txt  FreqCalculator.cpp  FreqCalculator.h  FreqToMIDI.cpp  FreqToMIDI.h  GetNoteData.cpp  GetNoteData.h  WavReader.cpp  WavReader.h  kiss_fft.h  kiss_fftr.cpp  main.cpp  window.c  window.h
gaborator/: fft.h  gaborator.h  render.h  resample2.h
